# gmt_tutorials_simple

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build_and_deploy.yml
basic_defaults/: index.html
contour_profile/: index.html
docs/: basic_defaults.md  contour_profile.md  geology_map.md  histo_pie_ternary.md  index.md  intro_install.md  net_software.md  projection.md  seismicity_meca.md  taiwan_geography.md  three_dimension.md  topography_cpt.md  vector_velocity.md  xy_figure.md
geology_map/: index.html
histo_pie_ternary/: index.html
intro_install/: index.html
net_software/: index.html
projection/: index.html
search/: search_index.json
seismicity_meca/: index.html
taiwan_geography/: index.html
three_dimension/: index.html
topography_cpt/: index.html
vector_velocity/: index.html
xy_figure/: index.html
